unused packages removed

--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@iconify/react": "^4.0.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.11.10",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "antd": "^5.1.2",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
-    "classnames": "^2.3.2",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
