new reducer setup changes

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-NEXT_PUBLIC_APP_IMAGE_DOMAIN ='basobaasnew.asterdio.xyz'
-NEXT_PUBLIC_APP_BASE_URL='https://basobaasnew.asterdio.xyz/api'
-NEXT_PUBLIC_APP_IMG_URL ='https://basobaasnew.asterdio.xyz'
+NEXT_PUBLIC_APP_BASE_URL='https://basobaasblog.asterdio.xyz/'
+NEXT_PUBLIC_APP_API_URL = 'https://pocketbase.asterdio.xyz/api/'
+NEXT_PUBLIC_APP_IMAGE_DOMAIN ='basobaasblog.asterdio.xyz'
+NEXT_PUBLIC_APP_IMG_URL ='https://basobaasblog.asterdio.xyz/'
