--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
+    "pocketbase": "^0.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
