--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.6",
+    "moment": "^2.29.4",
     "next": "13.0.6",
     "pocketbase": "^0.10.0",
     "react": "18.2.0",
