--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "react-responsive": "^9.0.2",
     "sass": "^1.56.2",
     "typescript": "4.9.3"
   }
