--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ NEXT_PUBLIC_APP_BASE_URL='https://basobaasblog.asterdio.xyz/'
 NEXT_PUBLIC_APP_API_URL = 'https://pocketbase.asterdio.xyz/api/'
 NEXT_PUBLIC_APP_IMAGE_DOMAIN ='basobaasblog.asterdio.xyz'
 NEXT_PUBLIC_APP_IMG_URL ='https://basobaasblog.asterdio.xyz/'
+NEXT_PUBLIC_APP_PROPERTY_URL = 'https://baspbaasapi.asterdio.xyz'
