--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_APP_BASE_URL='https://basobaasblog.asterdio.xyz/'
 NEXT_PUBLIC_APP_API_URL = 'https://pocketbase.asterdio.xyz/api/'
-NEXT_PUBLIC_APP_IMAGE_DOMAIN ='basobaasblog.asterdio.xyz'
-NEXT_PUBLIC_APP_IMG_URL ='https://basobaasblog.asterdio.xyz/'
+NEXT_PUBLIC_APP_IMAGE_DOMAIN ='pocketbase.asterdio.xyz'
+NEXT_PUBLIC_APP_IMG_URL ='https://pocketbase.asterdio.xyz/api/files/blogs/'
 NEXT_PUBLIC_APP_PROPERTY_URL = 'https://basobaasapi.asterdio.xyz'
