video section completed

--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ NEXT_PUBLIC_APP_BASE_URL='https://basobaasblog.asterdio.xyz/'
 NEXT_PUBLIC_APP_API_URL = 'https://pocketbase.asterdio.xyz/api/'
 NEXT_PUBLIC_APP_IMAGE_DOMAIN ='pocketbase.asterdio.xyz'
 NEXT_PUBLIC_APP_IMG_URL ='https://pocketbase.asterdio.xyz/api/files/blogs/'
+NEXT_PUBLIC_APP_VIDEOS_URL ='https://pocketbase.asterdio.xyz/api/files/videos/'
 NEXT_PUBLIC_APP_PROPERTY_URL = 'https://basobaasapi.asterdio.xyz'
