--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
+    "react-share": "^4.4.1",
     "sass": "^1.56.2",
     "typescript": "4.9.3"
   }
